# PyMeshCoreGUI

./: .gitignore  README.md  pyproject.toml
src/PyMeshCoreGUI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meshcore_gui/: main.py
src/meshcore_gui/controllers/: channel_controller.py  contact_controller.py  meshcore_controller.py  message_controller.py
src/meshcore_gui/models/: channel.py  channel_list_model.py  contact.py  contact_list_model.py  message.py  message_list_model.py
src/meshcore_gui/utils/: async_executor.py  parsing.py
src/meshcore_gui/views/: main_window.py
src/meshcore_gui/wizard/: wizard_companion.py
src/meshcore_gui/wizard/companion/: community-presets.json  community_presets.py  connection.py  deviceselection.py  devicestatus.py  mc_bluetooth.py  mc_serial.py
