[project]
name = "PyMeshCoreGUI"
version = "0.1.0"
description = "An open source Qt application build on MeshCore."
authors = [
    { name = "Stefan de Konink", email = "stefan@konink.de" },
]
dependencies = [
    "PySide6",
    "meshcore",
]

requires-python = ">=3.12"

[project.scripts]
meshcore-gui = "meshcore_gui.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.ty]
# Configuration for ty (if any) can go here
